--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div id="div1">Nacisnij na budyń żeby nakarmić Kacperka</div><br>
-    <img src="./img/kacperek_smol.jpg" id="kotek" width="50px" height="50px"><br>    
+    <img src="kacperek_smol.jpg" id="kotek" width="50px" height="50px"><br>    
     <!-- <input type="button" value="Zwiększ kociaka" onclick = "big()">
     <input type="button" value="Zmniejsz kociaka" onclick = "smol()"> -->
-    <button id="budyn" onclick="jedz()"><img src="./img/budyn.webp" width = 100px id="img_guzior"></button>
+    <button id="budyn" onclick="jedz()"><img src="budyn.webp" width = 100px id="img_guzior"></button>
     <script src="./script.js"></script>
     
 </body>
